# qpg

./: .gitignore  AGENTS.md  ARCHITECTURE.md  EXAMPLES.md  README.md  pyproject.toml  qpg-server
.codex/skills/spec-manager/: SKILL.md
docs/: README.md  architecture.md  cli.md  configuration.md  context-generation.md  mcp.md  troubleshooting.md
specs/: 00-spec-governance.md  01-product-and-domain.md  02-security-and-storage.md  03-retrieval-and-model.md  04-features-and-cli.md  05-mcp-and-config.md  06-testing-and-change-management.md  qpg-contract.md
src/qpg/: __init__.py  cli.py  config.py  context_generate.py  context_usage.py  contexts.py  db_pg.py  db_sqlite.py  get.py  settings.py  sources.py  update.py  usage.py
src/qpg/index/: __init__.py  build.py  fts.py  vec.py
src/qpg/mcp/: __init__.py  protocol.py  server_http.py  server_stdio.py
src/qpg/query/: __init__.py  expand.py  normalize_scores.py  (+2 more)
tests/: conftest.py  test_cli_config.py  test_cli_context_generate.py  test_cli_context_index_usage.py  test_cli_errors.py  test_cli_init.py  test_cli_mcp_http_threading.py  test_cli_mcp_startup_refresh.py  test_cli_schema_dump.py  test_cli_search_output.py  test_cli_source_add.py  test_cli_usage.py  test_cli_vector_model_required.py  test_context_generate_openai.py  test_contexts.py  test_db_pg.py  test_integration_pg_optional.py  test_introspect_resilience.py  test_json_schema.py  test_mcp_protocol.py  test_pg_dsn.py  test_privilege_check.py  test_rrf.py  test_source_filters.py  test_update.py  test_vec_model_cache.py
tests/harness/: docker-compose.yml
(+8 files in other folders)
