[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "qpg"
version = "0.1.0"
description = "Query PostgreSQL schema metadata from a local-first index"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "qpg contributors" }]
license = { text = "MIT" }
dependencies = [
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.11.0",
  "pyyaml>=6.0.0",
  "sqlite-vec>=0.1.6",
  "huggingface-hub>=0.35.0",
  "transformers>=4.57.0",
  "torch>=2.8.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[project.scripts]
qpg = "qpg.cli:app"

[dependency-groups]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
show_error_codes = true
files = ["src/qpg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: integration tests using the local Docker Postgres harness",
]
